logs/Server.2023-06-01.log
[2023-06-01T17:13:44.498] [ERROR] default - Error during Data Source initialization: C:\GIT\Personal\Nantoi\cgrgba-api\src\domain\model\Archive.ts:1
import { Entity, PrimaryGeneratedColumn, Column, ManyToOne} from "typeorm"
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1176:20)
    at Module._compile (node:internal/modules/cjs/loader:1218:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1308:10)
    at Module.load (node:internal/modules/cjs/loader:1117:32)
    at Module._load (node:internal/modules/cjs/loader:958:12)
    at Module.require (node:internal/modules/cjs/loader:1141:19)
    at require (node:internal/modules/cjs/helpers:110:18)
    at tryToRequire (C:\GIT\Personal\Nantoi\cgrgba-api\node_modules\typeorm\util\ImportUtils.js:20:17)
    at importOrRequireFile (C:\GIT\Personal\Nantoi\cgrgba-api\node_modules\typeorm\util\ImportUtils.js:34:24)
[2023-06-01T17:16:05.929] [INFO] default - Data Source has been initialized!
[2023-06-01T17:16:05.930] [INFO] default - [cretePermissions] Perform dependency injection for IPermissionEngineRepository
[2023-06-01T17:16:05.931] [INFO] default - [cretePermissions] Perform dependency injection for IPermissionGroupEngineRepository
[2023-06-01T17:16:05.931] [INFO] default - [cretePermissions] Start creating all permission automatically..
[2023-06-01T17:16:05.977] [INFO] default - [cretePermissions] Find role by name
[2023-06-01T17:16:05.980] [INFO] default - [cretePermissions] Creating SESSION
[2023-06-01T17:16:05.981] [INFO] default - [cretePermissions] Creating Admin
[2023-06-01T17:16:05.982] [INFO] default - [cretePermissions] Find role by name
[2023-06-01T17:16:05.982] [INFO] default - [cretePermissions] Creating SESSION
[2023-06-01T17:16:05.983] [INFO] default - [cretePermissions] Creating Admin
[2023-06-01T17:16:05.983] [INFO] default - [cretePermissions] End creating all permission automatically..
[2023-06-01T17:16:05.983] [INFO] default - [creteRoleAdmin] Perform dependency injection for IRoleEngineRepository
[2023-06-01T17:16:05.983] [INFO] default - [creteRoleAdmin] Find role by name
[2023-06-01T17:16:05.988] [INFO] default - [creteRoleAdmin] Role was found:[object Object]
[2023-06-01T17:16:06.000] [INFO] default - [createUserNantoi] Perform dependency injection for IUserEngineRepository
[2023-06-01T17:16:06.000] [INFO] default - [createUserNantoi] Find User by email
